Remove bogosity, use inner class